package io.deephaven.javascript.proto.dhinternal.io.deephaven.proto.hierarchicaltable_pb.hierarchicaltableviewrequest;

import jsinterop.annotations.JsPackage;
import jsinterop.annotations.JsType;

@JsType(
        isNative = true,
        name = "dhinternal.io.deephaven.proto.hierarchicaltable_pb.HierarchicalTableViewRequest.TargetCase",
        namespace = JsPackage.GLOBAL)
public class TargetCase {
    public static int EXISTING_VIEW_ID, HIERARCHICAL_TABLE_ID, TARGET_NOT_SET;
}
